# opportunities-forwarding-bot

./: .gitignore  Cargo.toml  README.md
res/: ghub_opportunities_list_snapshot.html
res/tests/: ghub_opportunities_post_snapshot.html
src/: bot.rs  github_scraper.rs  html_walker.rs  lib.rs  main.rs
